--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.5.0
+cffi==1.15.0
+cryptography==37.0.2
 Django==4.0.3
 django-cors-headers==3.11.0
 django-dotenv==1.4.2
+django-rest-knox==4.2.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 Pillow==9.1.0
+pycparser==2.21
 PyJWT==2.3.0
 pytz==2021.3
 sqlparse==0.4.2
